# reasonEq

./: .gitignore  .gitmodules  .latexcfg  BM.txt  BYHAND.md  CONTRIBUTORS.txt  Call-Graphs.md  LICENSE  MAIN.bib  MAIN.tex  Matching-Flow.md  README.md  ShortModuleNames.txt  TLBN.txt  TODO.md  TUT.tex  UsedSideConds.txt  byhand.txt  ctest.txt  current.bug  dump.hs  dump.txt  matchAndApply.txt  math.txt  package.yaml  ppt.txt  pptest.hs  pptest.txt  proto.txt  reasonEq.cabal  sideconds.txt  stack.yaml  test.sav  test.txt  tst.txt
UTP2/: Builtin.lhs  Logic.lhs  R.lhs  RAlg.lhs  RootTheory.lhs  Verification.lhs
app/: .Main.lhs.swo  .Main.lhs.swp  Main.hs  Main.lhs
bnfc/: AbsUTP.hs  EQV.utp  ErrM.hs  HOWTO.md  LexUTP.hs  LexUTP.x  Makefile.bak  ParUTP.hs  ParUTP.info  ParUTP.y  PrintUTP.hs  REQ.lbnf  Runner.hs  Runner.lhs  SkelUTP.hs  TestUTP.hs  UTP.cf  UTP.lbnf  deploy.sh  rmake  t.txt  t.utp
bnfc/REQ/: Abs.hs  Abs.hs.bak  Doc.txt  Doc.txt.bak  ErrM.hs  Lex.hs  Lex.x  Par.hs  Par.info  Par.y  Par.y.bak  Print.hs  Print.hs.bak  Skel.hs  Skel.hs.bak  Test.hs
bnfc/UTP/: Abs.hs  Abs.hs.bak  Doc.txt  Doc.txt.bak  Lex.hs  Lex.x  Lex.x.bak  Par.hs  Par.info  Par.y  Par.y.bak  Print.hs  Print.hs.bak  Skel.hs  Skel.hs.bak  Test.hs  Test.hs.bak
builtin/: AndOrInvert.lhs  AndorInvert.lhs  Arithmetic.lhs  Closure.lhs  Conjunction.lhs  Disjunction.lhs  Equality.lhs  Equivalence.lhs  Exists.lhs  ForAll.lhs  Implication.lhs  LTL.lhs  Lists.lhs  Negation.lhs  PredAxioms.lhs  PredExists.lhs  PredUniv.lhs  PropAxioms.lhs  PropConj.lhs  PropDisj.lhs  PropEquiv.lhs  PropImpl.lhs  PropMixOne.lhs  PropNot.lhs  PropRest.lhs  PropSubst.lhs  Propositions.lhs  Proto.lhs  Sets.lhs  StdSignature.lhs  StdTypeSignature.lhs  UClose.lhs  UTCP.lhs  UTPBase.lhs  UTPCommonWhile.lhs  UTPNaiveWhile.lhs  UTPObservations.lhs  UTPReading.lhs  UTPSignature.lhs  UTPStartup.lhs  (+4 more)
builtin/UTP/: Base.lhs  CommonWhile.lhs  Designs.lhs  NaiveWhile.lhs  Observations.lhs  Reading.lhs  UTCP.lhs  WhileRefineSig.lhs
devproj/: And.thr  AndOrInvert.thr  Arithmetic.thr  Equality.req  Equality.thr  Equiv.thr  Exists.cnj  Exists.thr  ForAll.thr  Implies.thr  LTL.thr  Lists.thr  Not.thr  Or.thr  PredAxioms.req  PredAxioms.thr  PredExists.cnj  PredExists.req  PredExists.thr  PredUniv.thr  PropAxioms.req  PropAxioms.thr  PropConj.cnj  PropConj.req  PropConj.thr  PropDisj.cnj  PropDisj.req  PropDisj.thr  PropEquiv.cnj  PropEquiv.req  PropEquiv.thr  PropImpl.cnj  PropImpl.req  PropImpl.thr  PropMixOne.cnj  PropMixOne.req  PropMixOne.thr  PropNot.cnj  PropNot.req  PropNot.thr  (+20 more)
devproj/AOI/: AOI-gen.utp  AOI.thr  AOI.utp  and_not_or_absorb.prf  and_or_distr.prf  deMorgan_and.prf  deMorgan_or.prf  eqv_def.prf  eqv_replace.prf  or_and_absorb.prf  or_and_distr.prf  or_not_and_absorb.prf
devproj/And/: And-gen.utp  And.thr  And.utp  and_and_distr.prf  and_assoc.prf  and_idem.prf  and_subst.prf  and_symm.prf  and_unit.prf  and_zero.prf  contradiction.prf
devproj/AndOrInvert/: AndOrInvert.thr
devproj/Arith/: Arith-gen.utp  Arith.thr  Arith.utp  Arithmetic.thr  mul_sub_distr.prf  simplified.prf
devproj/Arithmetic/: Arithmetic.thr
devproj/Closure/: Closure.thr  Closure.utp
devproj/DWhile/: DWhile.src  DWhile.thr  DWhile.utp  bot_true.prf  top_nok.prf
devproj/Designs/: Designs.src  Designs.thr  Designs.utp  mkH1_idem.prf
devproj/EQV/: Conjectures.cnj  EQV-gen.src  EQV-gen.utp  EQV.src  EQV.thr  EQV.utp  eqv_3-conj.txt  eqv_3.prf  eqv_id.prf  eqv_subst.prf  true_subst.prf
devproj/Equal/: Equal.thr  Equal.utp  eq_subst.prf
devproj/Equality/: Equality.thr
devproj/Equiv/: Equiv.thr  eqv_3-conj.txt  eqv_id.prf
devproj/Exists/: Exists-gen.utp  Exists.thr  Exists.utp
devproj/ForAll/: Conjectures.cnj  ForAll.thr  Forall.utp  forall_idem.prf  forall_swap.prf  forall_true.prf  one_point.prf
devproj/Impl/: Impl-gen.utp  Impl.src  Impl.thr  Impl.utp  Implies.thr  ante_as_imp.prf  contrapositive.prf  imp_def2.prf  imp_eqv_distr.prf  imp_meet.prf  imp_subst.prf  shunting.prf
devproj/Implies/: Implies.thr
devproj/LTL/: LTL.thr  LTL.utp  linearity.prf
devproj/Lists/: Lists.src  Lists.thr  Lists.utp  cat_assoc.prf  cat_nil.prf  hd_cons_tl.prf
devproj/NULL/: NULL.utp
devproj/Or/: Or.thr  (+6 more)
doc/: BasicVsTryMatching.md  GenVar-Set-Theory.tex  ImplicationProofs.md  KeyTypes.tex  Law-Listings.txt  LawClasses.tex  List-Variable-Set-Theory.tex  Matching-Features.tex  ModuloTheoryDefs.tex  Strange-Match.txt  TUTORIAL.md  TypingRules.tex  UTP2.sty  UTP2LogicDefs.tex  Views.tex  defTables.tex  lsthaskell.sty  lstlhs.sty  reasonEq.sty  reasonEqDefs.sty  tryLawByName-goodpath.hs  views.sty
experiments/: Acyclicity-code-snippet.lhs  LTLExp.lhs  SAT-equiv_replace-HUGE.txt  acyclicity experiments  tgraph.dot  tidy-transcripts.txt
proto/: Acyclic.hs  Arith-simplifiers.txt  Keep.hs  MPIterations.hs  MatchEquiv.hs  OneForAll.hs  Precedence.hs  ProofTypes.txt  Stratfied.hs  TRYOUT.hs  TermTypes.txt  auto-laws-planning.txt  reqEND  reqinit  reqoneone  reqprop  saveload-manifests  vlKnowMatch-mashup.txt
spapp/: Main.lhs
src/: .AbstractUI.lhs.swo  .AbstractUI.lhs.swp  .LiveProofs.lhs.swp  .REqState.lhs.swp  .TermZipper.lhs.swp  .Utilities.lhs.swp  AST.lhs  AbstractUI.lhs  AlphaEquiv.lhs  Assertions.lhs  Binding.lhs  Builder.lhs  Classifier.lhs  Control.lhs  Debugger.lhs  Dev.lhs  Files.lhs  FreeVars.lhs  HiddenTypeDictionary.tex  HiddenTypeDictionary.txt  Instantiate.lhs  KeyVisibleTypes.tex  Laws.lhs  LexBase.lhs  LiveProofs.lhs  LoadSave.lhs  MatchContext.lhs  Matching.lhs  NewSideCond.lhs  NotApplicable.lhs  Parsing.lhs  Persistence.lhs  PrettyPrint.lhs  PrettyTerms.lhs  ProgramIdentity.lhs  Proof.lhs  ProofMatch.lhs  ProofSettings.lhs  Proofs.lhs  Propositions.lhs  (+36 more)
test/: BindingTest.hs  FreeVarTest.hs  MatchScenarios.lhs  MatchingTest.hs  MkTestBind.hs  Spec.hs  TestDefs.hs  TestRendering.lhs  TestResultsTemp.cooked  TestResultsTemp.raw  TestResultsTemp.txt  VarDataTest.hs  handtest.txt
transcripts/: LTL_next_proofs.txt  LTL_until_proofs_1.txt  README.md  asg_simple.txt  asg_unchanged.txt  asg_unchanged_AST.txt  sqsupseteq_trans.txt
(+83 files in other folders)
