name:                reasonEq
version:             0.7.5.0
-- synopsis:
-- description:
homepage:            https://github.com/andrewbutterfield/reasonEq#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Butterfield
maintainer:          Andrew.Butterfield@scss.tcd.ie
copyright:           (c) 2017-19 Andrew Butterfield
category:            Theorem Provers
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src, proto, builtin
  exposed-modules:     Utilities
                     , LexBase
                     , Variables
                     , AST
                     , FreeVars
                     , SideCond
                     , VarData
                     , Binding
                     , Instantiate
                     , Matching
                     , Syntax
                     , Builder
                     , TermZipper
                     , Laws
                     , Proofs
                     , Sequents
                     , Theories
                     , LiveProofs
                     , StratifiedDAG
                     , Control
                     , Persistence
                     , Files
                     , REqState
                     , AbstractUI
                     , Ranking
                     , REPL
                     , Dev
                     -- in builtin
                     , PropAxioms
                     , PropEquiv
                     , PropNot
                     , PropDisj
                     , PropConj
                     , PropMixOne
                     , PropImpl
                     , PropSubst
                     , Equality
                     , PredAxioms
                     , PredExists
                     , PredUniv
                     , UTPStartup
                     , XYZ
                     , XYZDesign
                     -- in proto
                     , Acyclic
                     , TRYOUT
                     , TestRendering
                     , TestParsing
                     , WriteRead
  build-depends:       base >= 4.7 && < 5
                     , haskeline
                     , containers
                     , time
                     , directory
                     , filepath
                     , split
                     , nicesymbols
                     -- we need to support internal tests for some modules
                     , HUnit
                     -- , QuickCheck
                     , test-framework
                     , test-framework-hunit
                     -- , test-framework-quickcheck2
  default-language:    Haskell2010

executable req
  hs-source-dirs:      app
  main-is:             Main.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , filepath
                     , reasonEq
                     , nicesymbols
  default-language:    Haskell2010

test-suite reasonEq-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, nicesymbols/src
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , reasonEq
                     , nicesymbols
                     , HUnit
                     -- , QuickCheck
                     , test-framework
                     , test-framework-hunit
                     -- , test-framework-quickcheck2
  other-modules:       VarDataTest
                     , MkTestBind
                     , BindingTest
                     , MatchingTest
                     , MatchScenarios
                     , NiceSymbols
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewbutterfield/reasonEq
