name:                reasonEq
version:             0.8.0.0
-- synopsis:
-- description:
homepage:            https://github.com/andrewbutterfield/reasonEq#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Butterfield
maintainer:          Andrew.Butterfield@scss.tcd.ie
copyright:           (c) 2017-23 Andrew Butterfield
category:            Theorem Provers
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src, builtin, proto
  exposed-modules:     YesBut
                     , Debugger
                     , Utilities
                     , Control
                     , Symbols
                     , LexBase
                     , Variables
                     , AST
                     , FreeVars
                     , Substitution
                     , SideCond
                     , Assertions
                     , VarData
                     , Binding
                     , Instantiate
                     , Matching
                     , AlphaEquiv
                     , Syntax
                     , Builder
                     , TermZipper
                     , Laws
                     , Classifier
                     , Proofs
                     , Sequents
                     , Theories
                     , LiveProofs
                     , StratifiedDAG
                     , Persistence
                     , Files
                     , REqState
                     , AbstractUI
                     , Ranking
                     , REPL
                     , Dev
                     , TestRendering
                     , TestParsing
                     , WriteRead
                     -- in builtin
                     , StdSignature
                     , Equivalence
                     , Negation
                     , Disjunction
                     , Conjunction
                     , AndOrInvert
                     , Implication
                     , Equality
                     , ForAll
                     , Exists
                     , UClose
                     , UTPSignature
                     , UTPBase
                     , XYZ
                     , XYZDesign
                     -- in proto
                     , Acyclic
                     , TRYOUT
                     , SAT
  build-depends:       base >= 4.7 && < 5
                     , haskeline
                     , containers
                     , time
                     , directory
                     , filepath
                     , split
                     -- we need to support internal tests for some modules
                     , HUnit
                     -- , QuickCheck
                     , test-framework
                     , test-framework-hunit
                     -- , test-framework-quickcheck2
  default-language:    Haskell2010

executable req
  hs-source-dirs:      app
  main-is:             Main.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , filepath
                     , directory
                     , reasonEq
  default-language:    Haskell2010

test-suite reasonEq-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , reasonEq
                     , split
                     , HUnit
                     -- , QuickCheck
                     , test-framework
                     , test-framework-hunit
                     -- , test-framework-quickcheck2
  other-modules:       TestDefs
                     , VarDataTest
                     , FreeVarTest
                     -- , MkTestBind
                     , YesBut
                     , Debugger
                     , AST
                     , BindingTest
                     , MatchingTest
                     , MatchScenarios
                     , Symbols
                     , Assertions
                     , Binding
                     , Builder
                     , Control
                     , FreeVars
                     , LexBase
                     , Matching
                     , SideCond
                     , Substitution
                     , Syntax
                     , TermZipper
                     , TestRendering
                     , Utilities
                     , VarData
                     , Variables
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewbutterfield/reasonEq
